#111 add base typescript version

--- a/src/server/templates/page-template.hbs
+++ b/src/server/templates/page-template.hbs
@@ -10,9 +10,9 @@
       <link href="{{assets.client.css}}" rel="stylesheet">
     {{/if}}
     {{#if isProd}}
-      <script src="{{assets.client.js}}" defer></script>
+      <script src="{{assets.client.tsx}}" defer></script>
     {{else}}
-      <script src="{{assets.client.js}}" defer crossorigin></script>
+      <script src="{{assets.client.tsx}}" defer crossorigin></script>
     {{/if}}
 
     {{{title}}}
